syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "k1vch.link.v1;linkv1";

package api;

service UrlShortener{
  rpc SaveUrl(SaveUrlRequest) returns (SaveUrlResponse){
    option (google.api.http) = {
      post: "/api/v1/short"
      body: "*"
    };
  };
  rpc GetOrigin(GetOriginRequest) returns (GetOriginResponse){
    option (google.api.http) = {
      get: "/api/v1/short/{short_url}"
    };
  };
}

message SaveUrlRequest{
  string url = 2;
}

message SaveUrlResponse{
  string short_url = 2;
}

message GetOriginRequest{
  string short_url = 2;
}

message GetOriginResponse{
  string url = 2;
}
